Jumping is a bit better in the barchart, problems occurring when the saved drag direction and current direction are the same.  Made the same code fix to the piechart

--- a/d3 Prototyping/CSS/barchartStyles.css
+++ b/d3 Prototyping/CSS/barchartStyles.css
@@ -1,5 +1,10 @@
 /** Some Styles for the barchart visualization */
 
+body {
+    /**Disables default selections (text, svg elements) of the browser*/
+    -webkit-user-select: none;
+}
+
 /*Labels on the hint path */
 .hintLabels {
   font-family: sans-serif;
